# site-hits

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  design-qa.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.deploy/: README.md  deploy.env  fabfile.py  sync_env.py
.superdesign/: design-system.md
.superdesign/init/: components.md  extractable-components.md  layouts.md  pages.md  routes.md  theme.md
analytics/: admin.py  api.py  apps.py  automation.py  bot_ingestion.py  bots.py  checks.py  ingestion.py  middleware.py  models.py  privacy.py  product_ingestion.py  product_reporting.py  reporting.py  schemas.py  views.py
analytics/migrations/: 0001_initial.py  0002_analyticsevent_city_region.py  0003_botevent.py  0004_analyticsevent_automation.py  0005_product_events.py
assets/: design-system.css  tailwind.css
config/: settings.py  urls.py
dashboard/: apps.py  auth.py  checks.py  forms.py  goal_planning.py  product_tracking.py  urls.py  views.py
scripts/: start.sh  vendor-assets.mjs
sitehits/: __init__.py  wsgi.py
static/css/: widget.css
templates/: base.html
tests/: conftest.py  test_auth_dashboard.py  test_bot_tracking.py  test_checks.py  test_deploy_env.py  test_email_settings.py  test_goal_flow.py  test_goal_planning.py  test_ingestion_api.py  test_onboarding.py  test_privacy.py  test_product_events.py  test_reporting.py  test_retention.py  test_websites.py
tests_js/: dashboard-menu.test.js  product-metrics-settings.test.js  tracker.test.js
websites/: admin.py  apps.py  models.py
(+21 files in other folders)
